Revert "refactor) 자바버전조정, assertAll 적용"
This reverts commit 224dea1417e822d9fca342e575443c3c6da7cc27.